sent show and hide functionality

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
-          <div class="criteria">
+          <div id="criteria">
           <p>select length of password 8-128 <input type ="number" min ="8" max = "128" size = "50"></p>
           <p>Lowercase <input type="checkbox"></p>
           <p>Uppercase<input type="checkbox"></p>
