added literally everything else including array placement and bug fixes

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
           <!-- criterias for the password -->
           <div id="criteria">
           <p>select length of password 8-128 <select id ="numberLength"></select></p>
-          <p>Lowercase <input type="checkbox"></p>
-          <p>Uppercase<input type="checkbox"></p>
-          <p>Numeric<input type="checkbox"></p>
-          <p>Special Characters<input type="checkbox"></p>
+          <p>Lowercase <input id="lowerCase" type="checkbox"></p>
+          <p>Uppercase<input id="upperCase" type="checkbox"></p>
+          <p>Numeric<input id="numeric" type="checkbox"></p>
+          <p>Special Characters<input id="specialCharacter" type="checkbox"></p>
           <div>
             <button id="confirm">confirm</button>
           </div>
